--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     content="Specialist in dakreiniging, herstellingen en onderhoud in Leuven en omstreken. Familiebedrijf met snelle en persoonlijke service." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.dakreiniginglm.be/" />
-  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/dak.webp?v=20250713-v2" />
+  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/img/dak_herstelling.webp?v=20250718" />
   <meta property="og:site_name" content="Dakreiniging LM" />
 
   <!-- Twitter Card -->
@@ -28,7 +28,7 @@
   <meta name="twitter:title" content="Dakreiniging LM | Dakreiniging & Dakherstellingen in Leuven en Omstreken" />
   <meta name="twitter:description"
     content="Vader en zoon zorgen persoonlijk voor uw dakonderhoud, herstelling en reiniging in Leuven en omstreken. Betrouwbaar en lokaal vakmanschap." />
-  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/dak.webp?v=20250713-v2" />
+  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/img/dak_herstelling.webp?v=20250718" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png?v=20250713-v2" sizes="96x96" />
@@ -38,7 +38,7 @@
   <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
   <link rel="manifest" href="/assets/favicon/site.webmanifest?v=20250713-v2" />
 
-  <link rel="stylesheet" href="/assets/css/output.css?v=20250714">
+  <link rel="stylesheet" href="/assets/css/output.css?v=20250718">
   <link rel="preload" as="font" href="/assets/fonts/Montserrat/static/Montserrat-Bold.ttf?v=20250714" type="font/ttf"
     crossorigin="anonymous">
   <link rel="preload" as="font" href="/assets/fonts/Roboto/static/Roboto-Regular.ttf?v=20250714" type="font/ttf"
@@ -109,43 +109,68 @@
       <ul id="navMenu" role="menubar" aria-label="Hoofd navigatie"
         class="hidden md:flex flex-col md:flex-row md:space-x-6 space-y-4 md:space-y-0 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent px-6 md:px-0 py-6 md:py-0 text-blue-800 text-sm md:text-base font-medium transition-all duration-300 ease-in-out transform origin-top opacity-0 scale-95 md:opacity-100 md:scale-100">
         <li role="menuitem">
-          <a href="/" class="group relative inline-block pb-1">
+          <a href="/" class="group relative inline-block pb-1 w-full">
             <span class="group-hover:text-blue-900 transition">Home</span>
             <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
           </a>
         </li>
         <li role="menuitem">
-          <a href="/#over-ons" class="group relative inline-block pb-1">
+          <a href="/#over-ons" class="group relative inline-block pb-1 w-full">
             <span class="group-hover:text-blue-900 transition">Wie zijn wij</span>
             <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
           </a>
         </li>
-        <li role="menuitem">
-          <a href="/#diensten" class="group relative inline-block pb-1">
-            <span class="group-hover:text-blue-900 transition">Onze Diensten</span>
-            <span
-              class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-          </a>
+        <li role="menuitem" class="relative">
+          <button id="dienstenToggle" aria-haspopup="true" aria-expanded="false"
+            class="group relative inline-flex items-center focus:outline-none cursor-pointer">
+            <span class="transition relative pb-1">
+              Onze Diensten
+              <span
+                class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"
+                aria-hidden="true"></span>
+            </span>
+            <icon id="dienstenIcon" class="fas fa-caret-down ml-2 pb-1 text-blue-800 transition-transform duration-300">
+            </icon>
+          </button>
+
+
+          <ul id="dienstenDropdown"
+            class="hidden md:absolute md:-left-12 mt-0 md:mt-2 bg-white md:border md:border-blue-200 md:w-68 z-40 space-y-1 text-sm text-blue-800 transition transform origin-top opacity-0 scale-95 md:rounded-md md:shadow-lg">
+            <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50">
+              <a href="/diensten/dakherstellingen-hellende-daken.html" class="group relative inline-block pb-1 w-full">
+                <span class="group-hover:text-blue-900 transition">Dakherstellingen Hellende Daken</span>
+                <span
+                  class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
+              </a>
+            </li>
+            <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50">
+              <a href="/diensten/dakherstellingen-platte-daken.html" class="group relative inline-block pb-1 w-full">
+                <span class="group-hover:text-blue-900 transition">Dakherstellingen Platte Daken</span>
+                <span
+                  class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
+              </a>
+            </li>
+            <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50">
+              <a href="/diensten/dakreiniging-ontmossen.html" class="group relative inline-block pb-1 w-full">
+                <span class="group-hover:text-blue-900 transition">Dakreiniging & Ontmossen</span>
+                <span
+                  class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
+              </a>
+            </li>
+          </ul>
         </li>
         <li role="menuitem">
-          <a href="/#contact" class="group relative inline-block pb-1">
-            <span class="group-hover:text-blue-900 transition">Contact</span>
-            <span
-              class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-          </a>
-        </li>
-        <li role="menuitem">
-          <a href="/#recensies" class="group relative inline-block pb-1">
+          <a href="/#recensies" class="group relative inline-block pb-1 w-full">
             <span class="group-hover:text-blue-900 transition">Recensies</span>
             <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
           </a>
         </li>
         <li role="menuitem">
-          <a href="/algemene-voorwaarden.html" class="group relative inline-block pb-1">
-            <span class="group-hover:text-blue-900 transition">Algemene Voorwaarden</span>
+          <a href="/#contact" class="group relative inline-block pb-1 w-full">
+            <span class="group-hover:text-blue-900 transition">Contact</span>
             <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
           </a>
@@ -288,72 +313,6 @@
       </div>
     </section>
 
-    <!-- Contact -->
-    <section id="contact" class="py-24 bg-white">
-      <div class="max-w-3xl mx-auto px-6">
-        <h2 class="text-3xl font-bold text-center text-blue-800 mb-12">Contacteer Ons voor Dakreiniging of Herstellingen
-        </h2>
-        <form id="contactForm" action="/assets/contact-handler.php" method="POST"
-          class="bg-white p-8 rounded-lg shadow-lg space-y-6" novalidate>
-          <!-- Honeypot -->
-          <div aria-hidden="true" class="absolute left-[-9999px]">
-            <label for="website" class="sr-only">Laat dit veld leeg</label>
-            <input type="text" name="website" id="website" tabindex="-1" autocomplete="off">
-          </div>
-
-          <!-- Naam -->
-          <div>
-            <label for="naam" class="block text-blue-800 font-semibold">Naam</label>
-            <input type="text" id="naam" name="naam" required aria-describedby="error-naam" aria-invalid="false"
-              class="w-full border border-gray-300 p-3 rounded-lg mt-2">
-            <p class="text-sm text-red-600 mt-1 hidden" id="error-naam">Naam is verplicht.</p>
-          </div>
-
-          <!-- E-mail -->
-          <div>
-            <label for="email" class="block text-blue-800 font-semibold">E-mail</label>
-            <input type="email" id="email" name="email" required aria-describedby="error-email" aria-invalid="false"
-              class="w-full border border-gray-300 p-3 rounded-lg mt-2">
-            <p class="text-sm text-red-600 mt-1 hidden" id="error-email">Voer een geldig e-mailadres in.</p>
-          </div>
-
-          <!-- Dienst -->
-          <div>
-            <label for="dienst" class="block text-blue-800 font-semibold">Type dienst</label>
-            <select id="dienst" name="dienst" required aria-describedby="error-dienst" aria-invalid="false"
-              class="w-full border border-gray-300 p-3 rounded-lg mt-2">
-              <option value="">-- Kies een dienst --</option>
-              <option value="Herstelling">Dakherstelling</option>
-              <option value="Reiniging">Dakreiniging</option>
-              <option value="Algemene Voorwaarden">Algemene Voorwaarden</option>
-            </select>
-            <p class="text-sm text-red-600 mt-1 hidden" id="error-dienst">Selecteer een dienst.</p>
-          </div>
-
-          <!-- Onderwerp -->
-          <div>
-            <label for="onderwerp" class="block text-blue-800 font-semibold">Details</label>
-            <textarea id="onderwerp" name="onderwerp" rows="4" required aria-describedby="error-onderwerp"
-              aria-invalid="false" class="w-full border border-gray-300 p-3 rounded-lg mt-2"></textarea>
-            <p class="text-sm text-red-600 mt-1 hidden" id="error-onderwerp">Geef een korte beschrijving van uw
-              aanvraag.
-            </p>
-          </div>
-          <div class="flex justify-end">
-            <button type="submit"
-              class="bg-blue-800 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition cursor-pointer">
-              <span class="mr-3">Verzenden</span><span><i class="fas fa-paper-plane"></i></span>
-            </button>
-          </div>
-        </form>
-      </div>
-    </section>
-
-    <div id="toast" role="status" aria-live="polite"
-      class="fixed top-4 right-4 px-6 py-4 rounded-lg shadow-lg z-50 text-white transform opacity-0 transition-all duration-500 ease-in-out translate-x-full">
-      <span id="toast-message"></span>
-    </div>
-
     <section id="recensies" class="container mx-auto py-16 px-4 sm:px-6 lg:px-16">
       <h2 class="text-4xl font-semibold text-center text-gray-800 mb-12">Recensies van onze klanten</h2>
       <div class="relative px-10 overflow-visible">
@@ -465,6 +424,74 @@
         <!-- Pagination -->
         <div id="pagination" class="flex justify-center gap-4 mt-6"></div>
     </section>
+
+    <!-- Contact -->
+    <section id="contact" class="py-24 bg-white">
+      <div class="max-w-3xl mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center text-blue-800 mb-12">Contacteer Ons voor Dakreiniging of Herstellingen
+        </h2>
+        <form id="contactForm" action="/assets/contact-handler.php" method="POST"
+          class="bg-white p-8 rounded-lg shadow-lg space-y-6" novalidate>
+          <!-- Honeypot -->
+          <div aria-hidden="true" class="absolute left-[-9999px]">
+            <label for="website" class="sr-only">Laat dit veld leeg</label>
+            <input type="text" name="website" id="website" tabindex="-1" autocomplete="off">
+          </div>
+
+          <!-- Naam -->
+          <div>
+            <label for="naam" class="block text-blue-800 font-semibold">Naam</label>
+            <input type="text" id="naam" name="naam" required aria-describedby="error-naam" aria-invalid="false"
+              class="w-full border border-gray-300 p-3 rounded-lg mt-2">
+            <p class="text-sm text-red-600 mt-1 hidden" id="error-naam">Naam is verplicht.</p>
+          </div>
+
+          <!-- E-mail -->
+          <div>
+            <label for="email" class="block text-blue-800 font-semibold">E-mail</label>
+            <input type="email" id="email" name="email" required aria-describedby="error-email" aria-invalid="false"
+              class="w-full border border-gray-300 p-3 rounded-lg mt-2">
+            <p class="text-sm text-red-600 mt-1 hidden" id="error-email">Voer een geldig e-mailadres in.</p>
+          </div>
+
+          <!-- Dienst -->
+          <div>
+            <label for="dienst" class="block text-blue-800 font-semibold">Type dienst</label>
+            <select id="dienst" name="dienst" required aria-describedby="error-dienst" aria-invalid="false"
+              class="w-full border border-gray-300 p-3 rounded-lg mt-2">
+              <option value="">-- Kies een dienst --</option>
+              <option value="Herstelling">Dakherstelling</option>
+              <option value="Reiniging">Dakreiniging</option>
+              <option value="Overige">Overige</option>
+            </select>
+            <p class="text-sm text-red-600 mt-1 hidden" id="error-dienst">Selecteer een dienst.</p>
+          </div>
+
+          <!-- Onderwerp -->
+          <div>
+            <label for="onderwerp" class="block text-blue-800 font-semibold">Details</label>
+            <textarea id="onderwerp" name="onderwerp" rows="4" required aria-describedby="error-onderwerp"
+              aria-invalid="false" class="w-full border border-gray-300 p-3 rounded-lg mt-2"></textarea>
+            <p class="text-sm text-red-600 mt-1 hidden" id="error-onderwerp">Geef een korte beschrijving van uw
+              aanvraag.
+            </p>
+          </div>
+          <div class="flex justify-end">
+            <button type="submit"
+              class="bg-blue-800 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition cursor-pointer">
+              <span class="mr-3">Verzenden</span><span><i class="fas fa-paper-plane"></i></span>
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <div id="toast" role="status" aria-live="polite"
+      class="fixed top-4 right-4 px-6 py-4 rounded-lg shadow-lg z-50 text-white transform opacity-0 transition-all duration-500 ease-in-out translate-x-full">
+      <span id="toast-message"></span>
+    </div>
+
+
   </main>
 
 
@@ -502,8 +529,8 @@
       </div>
     </div>
   </footer>
-  <script src="/assets/js/bundle-icon.js?v=20250714" defer></script>
-  <script src="/assets/js/bundle.js?v=20250714" defer></script>
+  <script src="/assets/js/bundle-icon.js?v=20250718" defer></script>
+  <script src="/assets/js/bundle.js?v=20250718" defer></script>
   <script type="application/ld+json">
 [
   {
