--- a/algemene-voorwaarden.html
+++ b/algemene-voorwaarden.html
@@ -19,14 +19,15 @@
         content="Algemene voorwaarden voor de diensten van DAKREINIGING LM / DAKWERKEN LM." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.dakreiniginglm.be/algemene-voorwaarden.html" />
-    <meta property="og:image" content="https://www.dakreiniginglm.be/assets/img/dak_herstelling.webp?v=20250718" />
+    <meta property="og:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
     <meta property="og:site_name" content="Dakreiniging LM" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Algemene Voorwaarden | Dakreiniging LM / Dakwerken LM" />
     <meta name="twitter:description"
         content="Algemene voorwaarden voor de diensten van DAKREINIGING LM / DAKWERKEN LM." />
-    <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/img/dak_herstelling.webp?v=20250718" />
+    <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
+
     <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
@@ -34,7 +35,7 @@
     <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
     <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
-    <link rel="stylesheet" href="/assets/css/output.css?v=20250718">
+    <link rel="stylesheet" href="/assets/css/output.css?v=20250722">
     <link rel="canonical" href="https://www.dakreiniginglm.be/algemene-voorwaarden.html">
 
 
