--- a/diensten/dakherstellingen-platte-daken.html
+++ b/diensten/dakherstellingen-platte-daken.html
@@ -20,14 +20,14 @@
     content="Professionele onderhoudsdiensten en herstellingen voor platte daken (EPDM, roofing) in de regio Herentals en Leuven. Voorkom problemen met preventief onderhoud." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.dakreiniginglm.be/dakherstellingen-platte-daken.html" />
-  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/img/dak_herstelling.webp?v=20250718" />
+  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
   <meta property="og:site_name" content="Dakreiniging LM" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Platte Daken Herstellen & Onderhoud | Dakreiniging LM" />
   <meta name="twitter:description"
     content="Houd uw plat dak in topconditie met onze expertise. Specialist in herstellingen, reiniging en preventief onderhoud voor alle platdaktypes." />
-  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/img/dak_herstelling.webp?v=20250718" />
+  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
   <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
   <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
@@ -35,7 +35,7 @@
   <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
   <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
-  <link rel="stylesheet" href="/assets/css/output.css?v=20250718">
+  <link rel="stylesheet" href="/assets/css/output.css?v=20250722">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y6ZMGVS5NW"></script>
   <script>
