--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     content="Specialist in dakreiniging, herstellingen en onderhoud in Leuven en omstreken. Familiebedrijf met snelle en persoonlijke service." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.dakreiniginglm.be/" />
-  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/img/dak_herstelling.webp?v=20250718" />
+  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
   <meta property="og:site_name" content="Dakreiniging LM" />
 
   <!-- Twitter Card -->
@@ -28,7 +28,7 @@
   <meta name="twitter:title" content="Dakreiniging LM | Dakreiniging & Dakherstellingen in Leuven en Omstreken" />
   <meta name="twitter:description"
     content="Vader en zoon zorgen persoonlijk voor uw dakonderhoud, herstelling en reiniging in Leuven en omstreken. Betrouwbaar en lokaal vakmanschap." />
-  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/img/dak_herstelling.webp?v=20250718" />
+  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png?v=20250713-v2" sizes="96x96" />
@@ -38,7 +38,7 @@
   <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
   <link rel="manifest" href="/assets/favicon/site.webmanifest?v=20250713-v2" />
 
-  <link rel="stylesheet" href="/assets/css/output.css?v=20250718">
+  <link rel="stylesheet" href="/assets/css/output.css?v=20250722">
   <link rel="preload" as="font" href="/assets/fonts/Montserrat/static/Montserrat-Bold.ttf?v=20250714" type="font/ttf"
     crossorigin="anonymous">
   <link rel="preload" as="font" href="/assets/fonts/Roboto/static/Roboto-Regular.ttf?v=20250714" type="font/ttf"
@@ -182,7 +182,7 @@
   <main role="main">
     <!-- Hero -->
     <section id="home" class="relative h-screen bg-cover bg-fixed overflow-hidden">
-      <div class="absolute inset-0 bg-white/30 z-0"></div>
+      <div class="absolute inset-0 bg-white/20 z-0"></div>
 
       <div id="carousel-reiniging"
         class="absolute inset-0 z-[-2] transform scale-[1.1] bg-cover bg-top bg-fixed transition-opacity duration-1000 ease-in-out">
@@ -191,12 +191,12 @@
         class="absolute inset-0 z-[-1] transform scale-[1.1] bg-cover bg-top bg-fixed transition-opacity duration-1000 ease-in-out">
       </div>
 
-      <div class="relative h-full flex items-center justify-center px-6 sm:px-24 z-10">
+      <div class="relative h-full flex items-center justify-center md:ml-6 px-6 sm:px-24 z-10">
         <div class="bg-white/60 backdrop-blur-sm p-6 sm:p-10 rounded-lg shadow-lg max-w-2xl">
-          <h1 class="text-2xl sm:text-4xl md:text-5xl font-bold text-blue-900 mb-4 text-center md:leading-14">
-            Uw dakspecialist voor reiniging en herstellingen in Groot-Leuven
+          <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-blue-900 mb-4 text-center md:text-left md:leading-12">
+            Uw dakspecialist voor reiniging en herstellingen
           </h1>
-          <h2 class="text-xl sm:text-2xl md:text-3xl text-blue-800 font-medium mb-8 text-center">
+          <h2 class="text-lg md:text-2xl text-blue-800 font-medium mb-8 text-center md:text-left">
             Voor het reinigen, herstellen en onderhouden van alle types daken.
           </h2>
           <p class="text-md sm:text-xl md:text-2xl text-blue-800 text-center">
@@ -260,7 +260,7 @@
 
     <!-- Diensten -->
     <section id="diensten" class="py-24 relative min-h-screen bg-cover bg-top bg-fixed md:px-12"
-      style="background-image: url('assets/img/dak_reiniging.webp?v=20250713-v2');">
+      style="background-image: url('assets/img/dak_reiniging_sub.webp?v=20250722');">
       <div class="absolute inset-0 bg-white/60 z-0"></div>
       <div class="relative mx-auto px-6 text-center z-10">
         <h2 class="text-4xl font-bold text-blue-800 mb-12 leading-tight">Onze Diensten voor Dakreiniging en
@@ -376,7 +376,7 @@
 
             <article class="slide min-w-full md:min-w-1/2 lg:min-w-1/3 px-4">
               <div class="bg-white rounded-xl shadow-lg p-8 text-center h-full flex flex-col">
-                <img src="/assets/img//recensies//els.webp?v=20250714" width="96" height="96" loading="lazy"
+                <img src="/assets/img//recensies//els.webp?v=20250722" width="96" height="96" loading="lazy"
                   decoding="async" alt="Els uit Bierbeek, dankbaar voor dakinspectie"
                   class="w-24 h-24 rounded-full mx-auto mb-4 ring-4 ring-blue-400" />
                 <h3 class="text-xl font-medium text-gray-900 mb-2">Els uit Bierbeek</h3>
@@ -530,7 +530,7 @@
     </div>
   </footer>
   <script src="/assets/js/bundle-icon.js?v=20250718" defer></script>
-  <script src="/assets/js/bundle.js?v=20250718" defer></script>
+  <script src="/assets/js/bundle.js?v=20250722" defer></script>
   <script type="application/ld+json">
 [
   {
