--- a/index.html
+++ b/index.html
@@ -197,20 +197,25 @@
             Uw dakspecialist voor reiniging en herstellingen
           </h1>
           <h2 class="text-lg md:text-2xl text-blue-800 font-medium mb-8 text-center">
-            Voor het reinigen, herstellen en onderhouden van alle types daken.
+            Voor het reinigen, herstellen en onderhouden van alle types daken
           </h2>
           <p class="text-md sm:text-xl md:text-2xl text-blue-800 text-center">
             <span class="block md:inline"><i class="fas fa-phone mr-2"></i>0473 67 19 44</span>
             <span class="hidden md:inline">&VerticalBar;</span>
-            <span><i class="fas fa-envelope mr-2"></i>info@dakreiniginglm.be</span>
-
+            <span><i class="fas fa-envelope mr-2"></i><a href="#contact"
+                class="text-blue-800 underline hover:text-blue-900 transition-colors duration-200">info@dakreiniginglm.be</a></span>
           </p>
+
+          <div class="mt-6 text-center">
+            <a href="#contact"
+              class="inline-flex items-center gap-2 text-blue-800 text-lg font-medium px-6 py-3 border-2 border-blue-800 rounded-lg bg-transparent hover:translate-y-0.5 active:translate-y-1 transition-all duration-150 ease-in-out">
+              Neem contact op <i class="fas fa-paper-plane"></i>
+            </a>
+          </div>
+
         </div>
       </div>
     </section>
-
-
-
 
     <!-- About Us -->
     <section id="over-ons" class="bg-white py-16 sm:py-24 px-6">
@@ -530,7 +535,7 @@
     </div>
   </footer>
   <script src="/assets/js/bundle-icon.js?v=20250718" defer></script>
-  <script src="/assets/js/bundle.js?v=20250722" defer></script>
+  <script src="/assets/js/bundle.js?v=20250722-v2" defer></script>
   <script type="application/ld+json">
 [
   {
