--- a/index.html
+++ b/index.html
@@ -200,9 +200,13 @@
             Voor het reinigen, herstellen en onderhouden van alle types daken
           </h2>
           <p class="text-md sm:text-xl md:text-2xl text-blue-800 text-center">
-            <span class="block md:inline"><i class="fas fa-phone mr-2"></i>0473 67 19 44</span>
+            <span class="block md:inline"><i class="fas fa-phone mr-2"></i>
+              <a href="tel:0473671944">0473 67 19 44</a>
+            </span>
             <span class="hidden md:inline">&VerticalBar;</span>
-            <span><i class="fas fa-envelope mr-2"></i><a href="#contact"
+            <span>
+              <i class="fas fa-envelope mr-2"></i>
+              <a href="#contact"
                 class="text-blue-800 underline hover:text-blue-900 transition-colors duration-200">info@dakreiniginglm.be</a></span>
           </p>
 
