--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 
   <title>Dakreiniging LM | DakherstellingenLM</title>
 
+  <script src="https://www.google.com/recaptcha/api.js?render=6LepJJsrAAAAAJd8sFU5DexBd0aQzQwHsMtzO5_U" async
+    defer></script>
+
+
   <!-- Google Analytics 4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y6ZMGVS5NW"></script>
   <script>
@@ -56,6 +60,17 @@
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-Y6ZMGVS5NW');
+  </script>
+
+  <!-- Google Ads/Tag Manager -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17385296548">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17385296548');
   </script>
 
   <script type="application/ld+json">
@@ -84,6 +99,12 @@
     {
       "@type": "ListItem",
       "position": 4,
+      "name": "Recensies",
+      "item": "https://www.dakreiniginglm.be/#recensies"
+    },
+    {
+      "@type": "ListItem",
+      "position": 5,
       "name": "Contact",
       "item": "https://www.dakreiniginglm.be/#contact"
     }
@@ -485,6 +506,7 @@
               aanvraag.
             </p>
           </div>
+
           <div class="flex justify-end">
             <button type="submit"
               class="bg-blue-800 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition cursor-pointer">
@@ -499,8 +521,6 @@
       class="fixed top-4 right-4 px-6 py-4 rounded-lg shadow-lg z-50 text-white transform opacity-0 transition-all duration-500 ease-in-out translate-x-full">
       <span id="toast-message"></span>
     </div>
-
-
   </main>
 
 
@@ -539,7 +559,8 @@
     </div>
   </footer>
   <script src="/assets/js/bundle-icon.js?v=20250718" defer></script>
-  <script src="/assets/js/bundle.js?v=20250722-v2" defer></script>
+  <script src="/assets/js/bundle.js?v=20250811" defer></script>
+
   <script type="application/ld+json">
 [
   {
