--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
     gtag('config', 'AW-17385296548');
   </script>
 
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-5GWTSZZN');</script>
+  <!-- End Google Tag Manager -->
+
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -114,6 +125,10 @@
 </head>
 
 <body class="bg-white text-gray-900">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5GWTSZZN" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <!-- Navigation -->
   <nav class="fixed top-0 w-full z-50 backdrop-blur-md bg-white/70 shadow-md border-b border-blue-500"
@@ -614,7 +629,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jsencrypt/bin/jsencrypt.min.js"></script>
 
   <script src="/assets/js/bundle-icon.js?v=20250718" defer></script>
-  <script src="/assets/js/bundle.js?v=20250903-2" defer></script>
+  <script src="/assets/js/bundle.js?v=20250916-3" defer></script>
 
   <script type="application/ld+json">
 [
